[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selenodriver"
version = "0.1.1"
description = "Selenium-style synchronous WebDriver API powered by Python nodriver."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "nodriver>=0.39",
]
authors = [
  { name = "selenodriver contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/selenodriver"]

[tool.hatch.build]
exclude = [
  "/ignore/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "smoke: real browser smoke tests",
]
